examples/test/testpolicy3804.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3804
  namespace: namespace210
spec:
  podSelector:
    matchLabels:
      key8: value0
      key20: value40
      key21: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value11
          key43: value39
          key37: value7
      podSelector:
        matchLabels:
          key29: value46
          key39: value21
          key6: value35
